converting to ejs partial

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,13 +28,13 @@
         <link rel="stylesheet" href="/assets/css/bootstrap-table.min.css">
 
          {{!-- socket.io config --}}
-        <script src="/assets/js/socket.io.js"></script>
+        {{!-- <script src="/assets/js/socket.io.js"></script>
         <script>
             var socket = io.connect('https://ecom-admin.herokuapp.com');
             socket.on('news', function (data) {
                 socket.emit('my other event', { my: 'data' });
             });
-        </script>
+        </script> --}}
 
     </head>
 
