--- a/views/parents/categoryList.ejs
+++ b/views/parents/categoryList.ejs
@@ -1,4 +1,5 @@
 
+<%- include('../partials/_head') %>
 
 <div class="container-fluid" style="width:100%;min-height: 700px">
     <div class="register-logo">
@@ -21,29 +22,29 @@
             </tr>
             </thead>
             <tbody>
-            {{# each category}}
+            <% for(let i=0; i< category.length; i++){ %>
             <tr>
-                <td>{{this.count}}</td>
-                <td>{{this.name}}</td>
-                {{# if this.enabled}}
+                <td><%= category[i].count %></td>
+                <td><%= category[i].name %></td>
+
+                <% if (category[i].enabled) { %>
                 <td><span class="tags">Enabled</span></td>
-                {{else}}
+                <% } else { %>
                 <td><span  class="tags"  style="background: rgb(202, 111, 129)">Disabled</span></td>
-                {{/if}}
+                <% } %>
                 <td>
-                    <a data-toggle="tooltip" title="Edit info" class="btn btn-primary btn-sm" href="/category/updateCategory/{{this._id}}"
+                    <a data-toggle="tooltip" title="Edit info" class="btn btn-primary btn-sm" href="/category/updateCategory/<%= category[i]._id%>"
                         >Edit</a>
-                    {{# if this.enabled}}
-                    <a href="/category/category/changeStatus/{{this._id}}/false" data-toggle="tooltip" title="Disable the category"
+                    <% if (category[i].enabled) { %>
+                    <a href="/category/category/changeStatus/<%= category[i]._id%>/false" data-toggle="tooltip" title="Disable the category"
                         class="btn btn-primary btn-sm">Disable</a>
-                    {{else}}
-                    <a href="/category/category/changeStatus/{{this._id}}/true" data-toggle="tooltip" title="Enable the category"
+                    <% } else { %>
+                    <a href="/category/category/changeStatus/<%= category[i]._id%>/true" data-toggle="tooltip" title="Enable the category"
                         class="btn btn-primary btn-sm">Enable</a>
-                    {{/if}}
+                    <% } %>
                 </td>
             </tr>
-
-            {{/each}}
+            <% } %>
             </tbody>
         </table>
     </div>
@@ -57,3 +58,5 @@
         } );
     } );
 </script>
+
+<%- include('../partials/_footer') %>
