--- a/views/parents/subCategoryList.ejs
+++ b/views/parents/subCategoryList.ejs
@@ -1,3 +1,4 @@
+<%- include('../partials/_head') %>
 
 <div class="container-fluid" style="width:100%;min-height: 700px">
     <div class="register-logo">
@@ -19,29 +20,30 @@
             </tr>
              </thead>
              <tbody>
-          {{# each subcategory}}
+            <% for(let i=0; i< subcategory.length; i++){ %>
+
             <tr>
-                <td>{{this.count}}</td>
-                <td>{{this.name}}</td>
-                <td>{{this.category.name}}</td>
-                {{# if this.enabled}}
+                <td> <%= subcategory[i].count%></td>
+                <td> <%= subcategory[i].name%></td>
+                <td> <%= subcategory[i].category.name%></td>
+                <% if(subcategory[i].enabled) { %>
                 <td><span class="tags">Enabled</span></td>
-                {{else}}
+                <% } else { %>
                 <td><span  class="tags"  style="background: rgb(202, 111, 129)">Disabled</span></td>
-                {{/if}}
+                <% } %>
                 <td>
                     <a data-toggle="tooltip" 
-                        title="Edit info" class="btn btn-primary btn-sm" href="/category/updateSubCategory/{{this._id}}" >Edit</a>
-                    {{# if this.enabled}}
-                    <a href="/category/subcategory/changeStatus/{{this._id}}/false" data-toggle="tooltip" 
+                        title="Edit info" class="btn btn-primary btn-sm" href="/category/updateSubCategory/ <%= subcategory[i]._id%>" >Edit</a>
+                    <% if(subcategory[i].enabled) { %>
+                    <a href="/category/subcategory/changeStatus/ <%= subcategory[i]._id%>/false" data-toggle="tooltip" 
                         title="Disable the sub category" class="btn btn-primary btn-sm" >Disable</a>
-                    {{else}}
-                         <a href="/category/subcategory/changeStatus/{{this._id}}/true" data-toggle="tooltip" 
+                    <% } else { %>
+                         <a href="/category/subcategory/changeStatus/ <%= subcategory[i]._id%>/true" data-toggle="tooltip" 
                         title="Enable the sub category" class="btn btn-primary btn-sm" >Enable</a>
-                    {{/if}}
+                    <% } %>
                 </td>
             </tr>
-            {{/each}}
+            <% } %>
             </tbody>
         </table>
     </div>
@@ -54,3 +56,4 @@
         } );
     } );
 </script>
+<%- include('../partials/_footer') %>
