--- a/views/supplier/supplierReg.ejs
+++ b/views/supplier/supplierReg.ejs
@@ -1,5 +1,5 @@
-
-<div class="register-box " style="width:70%" onload="set_vari()">
+<%- include('../partials/_head') %>
+<div class="register-box " style="width:99%" onload="set_vari()">
     <div class="register-logo">
         <a href="index.html"><b>Supplier</b>Registration</a>
     </div>
@@ -17,23 +17,11 @@
                         <div class="col-md-6">
                             <input type="date" class="form-control inp" style=" line-height: 19px;width: auto;" name="date11"
                     id="date11" required>
-                            {{!-- <input type="text" class="form-control inp  " name="date" id="date"
-                                value="{{formatDate date}}" required> --}}
+                            
                         </div>
                     </div>
                 </div>
 
-                {{!-- <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-5 col5">
-                            <label class="lbl" for="cemail">Time<span style="color:red">*</span> </label>
-                        </div>
-                        <div class="col-md-6">
-                            <input type="text" class="form-control inp" name="time" id="time"
-                                value="{{formatTime lossDate "HH:mm a"}}" required>
-                        </div>
-                    </div>
-                </div> --}}
                  <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
@@ -64,7 +52,7 @@
                             <label class="lbl" for="country">Country<span style="color:red">*</span> </label>
                         </div>
                         <div class="col-md-6">
-                            {{!-- <select class="form-control inp" id="country" name="country" id="country" required></select> --}}
+                           
                             <select class="form-control inp" id="country" name="country" id="country" required>
                                 <option value="Afghanistan">Afghanistan</option>
                                 <option value="Albania">Albania</option>
@@ -509,3 +497,4 @@
         document.querySelector("#date11").value = today;
         document.querySelector("#time11").value = new Date().getHours() + ":" + new Date().getMinutes() + ":" + new Date().getSeconds();;
     </script>
+<%- include('../partials/_footer') %>
