--- a/views/general/dashboard.ejs
+++ b/views/general/dashboard.ejs
@@ -1,34 +1,6 @@
-{{!-- <div style="margin-left: 5%;margin-right: 5%;">
-  <div class="row">
-    <a href="/products/viewLowQuantityProducts" style="color: white ">
-      <div class="well col-sm-4" style="background-color:#00c0eff3; height: 200px; ">
-        <h2>Low Stock Products {{quantity}}<span class="pull-right"><img
-              src="https://img.icons8.com/color/48/000000/low-battery.png"></span></h2>
-        <p>Shows the products that are low in stock, i.e. less than 5. It would also notify in the notification bar.
-          Immediately place an order with the supplier of the products which are low in stock.</p>
-      </div>
-    </a>
-    <a href="/orders/newOrders" style="color: white ">
-      <div class="well col-sm-4" style="background-color: #f39c12; height: 200px;  ">
-        <h2>
-          New Orders {{new_order}}
-          <span class="pull-right">
-            <img src="https://img.icons8.com/bubbles/48/000000/violet-shopping-basket.png"></span>
-        </h2>
-        <p>Shows the number of newly placed orders by the customer. A notification will pop-up in the notification bar.
-          Proceed the orders immediately after receiving.</p>
-      </div>
-    </a>
-    <a href="/forum/viewNewPost" style="color: white ">
-      <div class="well col-sm-4" style="background-color: #dd4b39; height: 200px;  ">
-        <h2>New Posts {{newPost}}<span class="pull-right"><img
-              src="https://img.icons8.com/office/48/000000/chat.png"></span></h2>
-        <p>Shows the number of new posts in the Forum. A notification in the notification bar will alert about new
-          posts. Approve or block posts soon after it is made.</p>
-      </div>
-    </a>
-  </div>
-</div> --}}
+<%- include('../partials/_head') %>
+
+
 
 <div class="row">
   <div class="col-md-12">
@@ -47,7 +19,9 @@
         <div class="col-lg-3 col-xs-6">
           <div class="small-box bg-aqua">
             <div class="inner">
-              <h3>{{new_order}}</h3>
+              <h3><%= new_order %></h3>
+
+       
               <h4> New Orders</h4>
               <p>Shows the number of newly placed orders by the customer. A notification will pop-up in the notification
                 bar.
@@ -65,7 +39,9 @@
         <div class="col-lg-3 col-xs-6">
           <div class="small-box bg-yellow">
             <div class="inner">
-              <h3>{{newPost}}</h3>
+              <h3><%=newPost%></h3>
+
+             
               <h4>New Posts</h4>
               <p>Shows the number of new posts in the Forum. A notification in the notification bar will alert about new
                 posts. Approve or block posts soon after it is made.</p>
@@ -99,7 +75,8 @@
         <div class="col-lg-3 col-xs-6">
           <div class="small-box bg-red">
             <div class="inner">
-              <h3>{{quantity}}</h3>
+              <h3><%= quantity%></h3>
+              
               <h4>Low Stock Products</h4>
               <p>Shows the products that are low in stock. It would also notify in the notification
                 bar.
@@ -129,58 +106,4 @@
 </div> 
 <!-- CSS -->
 
-{{!-- <style>
-#my_camera{
- width: 320px;
- height: 240px;
- border: 1px solid black;
-}
-</style>
-
-<div id="my_camera"></div>
-<input type=button value="Take Snapshot" onClick="take_snapshot()">
- 
-<div id="results" >
-  
-</div>
-
- 
-<!-- Webcam.min.js -->
-<script type="text/javascript" src="/assets/js/webcam.min.js"></script>
-
-<!-- Configure a few settings and attach camera -->
-<script language="JavaScript">
- Webcam.set({
-  width: 320,
-  height: 240,
-  image_format: 'jpeg',
-  jpeg_quality: 100
- });
- Webcam.attach( '#my_camera' );
-
-<!-- Code to handle taking the snapshot and displaying it locally -->
-function take_snapshot() {
- // take snapshot and get image data
- Webcam.snap( function(data_uri) {
-  
-  // display results in page
-  document.getElementById('results').innerHTML = 
-  '<img src="'+data_uri+'" id="test"/>';
-  console.log(document.getElementById('test').src);
-  } );
-}
-</script> --}}
-
-{{!-- <form id="target" action="
-">
-  <input type="text" value="Hello there">
-  <input type="submit" value="Go">
-</form>
-<script>
-$(document).ready(function(){
- $( "#target" ).submit(function( event ) {
-  alert( "Handler for .submit() called." );
-  event.preventDefault();
-});
-}); --}}
-
+<%- include('../partials/_footer') %>
