--- a/views/parents/newCategory.ejs
+++ b/views/parents/newCategory.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/_head') %>
+
 <div class="container-fluid">
 
     <div class="box">
@@ -40,3 +42,5 @@
         </div>
     </div>
 </div>
+
+<%- include('../partials/_footer') %>
