--- a/views/parents/updateCategory.ejs
+++ b/views/parents/updateCategory.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/_head') %>
+
 <div class="container-fluid">
 
     <div class="box">
@@ -15,14 +17,14 @@
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
                             <form action="/category/updateCategory" method="POST">
-                                <input type="hidden" name="id" id="id" value="{{category._id}}">
+                                <input type="hidden" name="id" id="id" value="<%=category._id%>">
                                 <div class="row">
                                     <div class="col-md-5 col5">
                                         <label class="lbl" for="name">Category</label>
                                     </div>
                                     <div class="col-md-6">
                                         <input type="text" class="form-control inp" name="name"
-                                            id="name" value="{{category.name}}" required>
+                                            id="name" value="<%=category.name%>" required>
                                     </div>
                                 </div>
                                 <br>
@@ -54,7 +56,7 @@
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
                             <form action="/category/SaveDiscountCategory" method="POST">
-                                <input type="hidden" name="id" id="id" value="{{category._id}}">
+                                <input type="hidden" name="id" id="id" value="<%=category._id%>">
                                 <div class="row">
                                     <div class="col-md-5 col5">
                                         <label class="lbl" for="discount">Discount</label>
@@ -62,9 +64,14 @@
                                     <div class="col-md-6">
                                         <select name="discount" id="discount" class="form-control inp">
                                             <option value="">Select One</option>
-                                             {{# each discount}}
-                                                <option value="{{this._id}}" {{# equality this._id ../category.discount }}selected{{/equality}}>{{this.name}}:{{# if this.usePercentage}}{{this.discountPercent}}%{{else}}{{this.discountAmount}}TK{{/if}}Off</option>
-                                            {{/each}}
+                                            <% for(let i=0; i< discount.length; i++){ %>
+                                                <option value="<%=discount[i]._id%>"
+                                                    <% if(locals.category.discount && discount[i]._id.toString() == category.discount.toString() ) { %>selected <% } %>>
+                                                    <%=discount[i].name%>:
+                                                    <% if (discount[i].usePercentage) { %>
+                                                        <%= discount[i].discountPercent %>%<% } else { %> 
+                                                            <%= discount[i].discountAmount %> TK<% } %> Off</option>
+                                            <% } %>
                                         </select>
                                     </div>
                                 </div>
@@ -82,3 +89,5 @@
         </div>
     </div>
 </div>
+
+<%- include('../partials/_footer') %>
