--- a/views/parents/updateSubCategory.ejs
+++ b/views/parents/updateSubCategory.ejs
@@ -1,3 +1,4 @@
+<%- include('../partials/_head') %>
 
 <div class="container-fluid">
 
@@ -100,3 +101,5 @@
         </div>
     </div>
 </div>
+
+<%- include('../partials/_footer') %>
