--- a/views/supplier/supplierEdit.ejs
+++ b/views/supplier/supplierEdit.ejs
@@ -1,10 +1,11 @@
-<div class="register-box" style="width:70%">
+<%- include('../partials/_head') %>
+<div class="register-box" style="width:99%">
     <div class="register-logo">
         <a href="index.html"><b>Update</b>Supplier Info</a>
     </div>
     <div class="register-box-body">
 
-        <input type="hidden" name="id" id="id" value="{{supplier._id}}">
+        <input type="hidden" name="id" id="id" value="<%=supplier._id %>">
         <div class="row">
             <div class="col-md-6">
                 <div class="row">
@@ -12,7 +13,7 @@
                         <label class="lbl" for="name">Name</label>
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control inp" name="cname" id="cname" value="{{supplier.cname}}"
+                        <input type="text" class="form-control inp" name="cname" id="cname" value="<%=supplier.cname %>"
                             required>
                     </div>
                 </div>
@@ -25,7 +26,7 @@
                     </div>
                     <div class="col-md-6">
                         <input type="text" class="form-control inp" name="cemail" id="cemail"
-                            value="{{supplier.cemail}}" required>
+                            value="<%=supplier.cemail %>" required>
                     </div>
                 </div>
             </div>
@@ -38,7 +39,6 @@
                         <label class="lbl" for="country">Country<span style="color:red">*</span> </label>
                     </div>
                     <div class="col-md-6">
-                        {{!-- <select class="form-control inp" id="country" name="country" id="country" required></select> --}}
                         <select class="form-control inp" id="country" name="country" id="country" required>
                             <option value="Afghanistan">Afghanistan</option>
                             <option value="Albania">Albania</option>
@@ -293,25 +293,26 @@
                     </div>
                     <div class="col-md-6">
                         <input type="text" name="registration_no" id="registration_no" class="form-control inp"
-                            value="{{supplier.registration_no}}">
+                            value="<%=supplier.registration_no %>">
                     </div>
                 </div>
             </div>
         </div>
         <br>
         <div id="addresses">
-            <input type="hidden" name="num_address1" id="num_address1" value="{{total_address}}">
-            {{# each supplier.address}}
+            <input type="hidden" name="num_address1" id="num_address1" value="<%=total_address %>">
+            <% for(let i = 0; i< supplier.address.length; i++) { %>
+         
             <hr>
             <div class="row">
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="address{{@index}}">Address<span style="color:red">*</span></label>
+                            <label class="lbl" for="address<%=i%>">Address<span style="color:red">*</span></label>
                         </div>
                         <div class="col-md-6">
-                            <textarea name="address{{@index}}" id="address{{@index}}" class="form-control inp"
-                                required>{{this.address}}</textarea><br>
+                            <textarea name="address<%=i%>" id="address<%=i%>" class="form-control inp"
+                                required><%=supplier.address[i].address %></textarea><br>
                         </div>
                     </div>
                 </div>
@@ -319,11 +320,11 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="contact{{@index}}">Phone Number<span
+                            <label class="lbl" for="contact<%=i%>">Phone Number<span
                                     style="color:red">*</span></label>
                         </div>
                         <div class="col-md-6">
-                            <input type="tel" name="contact{{@index}}" id="contact{{@index}}" value="{{this.contact}}"
+                            <input type="tel" name="contact<%=i%>" id="contact<%=i%>" value="<%=supplier.address[i].contact %>"
                                 class="form-control inp" required>
                         </div>
                     </div>
@@ -334,16 +335,17 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="zip{{@index}}">Zip/Postal code</label>
+                            <label class="lbl" for="zip<%=i%>">Zip/Postal code</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" name="zip{{@index}}" id="zip{{@index}}" value="{{this.zip}}"
+                            <input type="text" name="zip<%=i%>" id="zip<%=i%>" value="<%=supplier.address[i].zip%>"
                                 class="form-control inp">
                         </div>
                     </div>
                 </div>
             </div><br>
-            {{/each}}
+            <% } %>
+            
         </div>
         <br>
         <br>
@@ -380,35 +382,43 @@
         </div><br>
 
         <br>
-        <input type="hidden" name="total_contacts1" id="total_contacts1" value="{{total_contacts}}">
+        <input type="hidden" name="total_contacts1" id="total_contacts1" value="<%=total_contacts %>">
         <p style="margin-left:50px;">Main contact information</p>
 
-        {{!-- <input type="hidden" name="total_contacts" id="total_contacts" value="1"> --}}
+
+        
         <div id="contacts">
-            {{# each supplier.contactPerson}}
+            <% for(var k = 0; k< supplier.contactPerson.length; k++) { %>
+
             <hr>
             <div class="row">
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="contactName{{@index}}">Contact Name<span
+                            <label class="lbl" for="contactName<%=k%>">Contact Name<span
                                     style="color:red">*</span></label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" value="{{this.contactName}}" name="contactName{{@index}}"
-                                id="contactName{{@index}}" class="form-control inp" required>
+                            <input 
+                            type="text" 
+                            value="<%=supplier.contactPerson[k].contactName%>" 
+                            name="contactName<%=k%>"
+                            id="contactName<%=k%>" class="form-control inp" required>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="companyPosition{{@index}}">Company Position<span
+                            <label class="lbl" for="companyPosition<%=k%>">Company Position<span
                                     style="color:red">*</span></label>
                         </div>
                         <div class="col-md-6">
-                            <input type="text" value="{{this.companyPosition}}" name="companyPosition{{@index}}"
-                                id="companyPosition{{@index}}" class="form-control inp" required>
+                            <input 
+                            type="text" 
+                            value="<%=supplier.contactPerson[k].companyPosition %>" 
+                            name="companyPosition<%=k%>"
+                            id="companyPosition<%=k%>" class="form-control inp" required>
                         </div>
                     </div>
                 </div>
@@ -417,10 +427,13 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="email{{@index}}">Email<span style="color:red">*</span></label>
+                            <label class="lbl" for="email<%=k%>">Email<span style="color:red">*</span></label>
                         </div>
                         <div class="col-md-6">
-                            <input type="Email" value="{{this.email}}" name="email{{@index}}" id="email{{@index}}"
+                            <input 
+                                type="Email" 
+                                value="<%=supplier.contactPerson[k].email %>" 
+                                name="email<%=k%>" id="email<%=k%>"
                                 class="form-control inp" required>
                         </div>
                     </div>
@@ -428,11 +441,13 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="mobile{{@index}}">Mobile</label>
+                            <label class="lbl" for="mobile<%=k%>">Mobile</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="tel" value="{{this.mobile}}" name="mobile{{@index}}" id="mobile{{@index}}"
-                                class="form-control inp">
+                            <input type="tel" 
+                            value="<%=supplier.contactPerson[k].mobile %>" 
+                            name="mobile<%=k%>" id="mobile<%=k%>"
+                            class="form-control inp">
                         </div>
                     </div>
                 </div>
@@ -441,27 +456,33 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-5 col5">
-                            <label class="lbl" for="telephone{{@index}}">Telephone<span
+                            <label class="lbl" for="telephone<%=k%>">Telephone<span
                                     style="color:red">*</span></label>
                         </div>
                         <div class="col-md-3" style="width: 29%">
-                            <input type="tel" value="{{telephone}}" name="telephone{{@index}}" id="telephone{{@index}}"
+                            <input type="tel" 
+                            value="<%=supplier.contactPerson[k].telephone %>"
+                             name="telephone<%=k%>" id="telephone<%=k%>"
                                 class="form-control inp" required>
                         </div>
                         <div class="col-md-1"
-                            style="position: relative; min-height: 1px; padding-right: {{@index}}px; padding-left: 16px;">
+                            style="position: relative; min-height: 1px; padding-right: 5px; padding-left: 16px;">
                             Ext
                         </div>
                         <div class="col-md-2" style="width: 13%; ">
-                            <input type="text" value="{{extention}}" name="extention{{@index}}" id="extention{{@index}}"
+                            <input type="text" value="<%= supplier.contactPerson[k].extention %>" 
+                            name="extention<%=k%>" id="extention<%=k%>"
                                 class="form-control inp">
                         </div>
                     </div>
                 </div>
             </div>
             <br>
-            {{/each}}
+            <% } %>
         </div> <br>
+
+
+
         <div>
             <a style="margin-left:50px;" onclick="addContacts1Edit()" class="btn btn-success">Add Contact Person</a>
         </div>
@@ -473,7 +494,7 @@
             </div>
             <div class="col-md-8">
                 <textarea type="text" name="additionalInfo" id="additionalInfo" class="form-control"
-                    style="margin-right:30px;">{{supplier.additionalInfo}}</textarea>
+                    style="margin-right:30px;"><%=supplier.additionalInfo %></textarea>
             </div>
 
         </div>
@@ -491,3 +512,4 @@
     </div>
 
 </div>
+<%- include('../partials/_footer') %>
