--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/_head') %>
+
 <div class="login-box" style="margin-left:30%">
     <div class="login-logo">
         <a href="#"><b>Admin</b>Login</a>
@@ -24,7 +26,6 @@
             </div>
 
         </form>
-        
-        {{!-- <a href="/users/register" class="text-center">Register a new membership</a> --}}
     </div>
 </div>
+<%- include('../partials/_footer') %>
